// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comphub - Main - Page Layout should disable next button, when told to 1`] = `
<pf-comphub-page-layout
  hideNextButton="false"
  nextButtonEnabled="false"
  pageIconClass=""
  pageSubTitle=""
  pageTitle=""
  store={[Function Store]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <i
        aria-hidden="true"
        class="fa  page-icon"
      />
      <span
        class="page-title"
      >
        
      </span>
    </div>
    <div>
      
    </div>
    <div
      class="actions-section"
    >
      
      <button
        class="btn comphub-secondary-btn"
        data-qa-id="btn-back"
      >
         Back 
      </button>
      
      <button
        class="btn comphub-primary-btn"
        data-qa-id="btn-next"
        disabled=""
      >
         Next 
      </button>
    </div>
  </div>
</pf-comphub-page-layout>
`;

exports[`Comphub - Main - Page Layout should hide the back button, when told to 1`] = `
<pf-comphub-page-layout
  hideBackButton={[Function Boolean]}
  pageIconClass=""
  pageSubTitle=""
  pageTitle=""
  store={[Function Store]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <i
        aria-hidden="true"
        class="fa  page-icon"
      />
      <span
        class="page-title"
      >
        
      </span>
    </div>
    <div>
      
    </div>
    <div
      class="actions-section"
    >
      
      
      <button
        class="btn comphub-primary-btn"
        data-qa-id="btn-next"
        disabled=""
      >
         Next 
      </button>
    </div>
  </div>
</pf-comphub-page-layout>
`;

exports[`Comphub - Main - Page Layout should hide the next button, when told to 1`] = `
<pf-comphub-page-layout
  hideNextButton={[Function Boolean]}
  pageIconClass=""
  pageSubTitle=""
  pageTitle=""
  store={[Function Store]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <i
        aria-hidden="true"
        class="fa  page-icon"
      />
      <span
        class="page-title"
      >
        
      </span>
    </div>
    <div>
      
    </div>
    <div
      class="actions-section"
    >
      
      <button
        class="btn comphub-secondary-btn"
        data-qa-id="btn-back"
      >
         Back 
      </button>
      
    </div>
  </div>
</pf-comphub-page-layout>
`;
